--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -68,13 +68,13 @@
 .site_picks {
     min-height: 100vh;
     width: 100vw;
+    padding: 0.5rem 4rem; // background: #000;
     .head {
         display: flex;
         align-items: center;
         width: 100%;
         justify-content: space-between;
         text-align: center;
-        padding: 1rem; // background: #000;
         ul {
             font-size: .8rem;
             list-style: none;
@@ -95,7 +95,62 @@
     }
 }
 
-.site_pick_image_section {}
+.site_pick_image_section {
+    min-height: 720px;
+    // background: #000;
+    .images {
+        height: 500px;
+        display: flex;
+        gap: 1rem;
+        .img1 {
+            width: 50%;
+            height: 100%;
+            background-size: cover;
+            border-radius: 5px;
+        }
+        .img2 {
+            width: 25%;
+            height: 100%;
+            background-size: cover;
+            border-radius: 5px;
+        }
+    }
+    .property_info {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        padding: 0;
+        padding-right: 15rem;
+        margin: 0;
+        h3 {
+            padding: 0;
+            margin-bottom: 0;
+        }
+        div {
+            display: flex;
+            align-items: center;
+            font-size: 0.8rem;
+            gap: 3rem;
+            margin: 0;
+            a {
+                text-decoration: underline;
+            }
+        }
+        .details {
+            margin: 0;
+            padding: 0.4rem 2rem;
+            width: fit-content;
+            background: blue;
+            font-size: 1rem;
+            color: white;
+            border-radius: 5px;
+        }
+    }
+}
+
+.top_propertes {
+    h3 {}
+}
 
 .footer {
     display: flex;
