--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -31,7 +31,7 @@
     }
     h1 {
         z-index: 999;
-        font-size: 6.5rem;
+        font-size: var(--lg-font);
         font-weight: bold;
         margin-bottom: 0rem;
     }
