--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -184,10 +184,20 @@
     font-size: 1rem;
     border-radius: 5px;
     margin-top: 4rem;
-    .title {
-        font-size: 1.5rem;
+    .collector_title {
+        font-size: 1.3rem;
+        font-weight: 500;
         width: 100%;
+        max-width: 900px;
         text-align: left;
+    }
+    .boxes {
+        width: 100%;
+        max-width: 790px;
+        gap: 1rem;
+        display: grid;
+        margin-top: 2rem;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     }
 }
 
@@ -239,13 +249,44 @@
     }
 }
 
-.footer {
+.display_boxes {
     display: flex;
-    flex: 1;
-    padding: 2rem 0;
-    border-top: 1px solid #eaeaea;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+    background-color: hsl(0, 0%, 94%);
+    text-align: center;
+    padding: 0.9rem 2rem;
+    h3 {
+        color: hsl(220, 95%, 40%);
+        font-size: var(--colector-lg);
+        margin: 0;
+    }
+    p {
+        font-size: var(--colector-font);
+    }
+}
+
+.footer {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    min-height: 300px;
+    margin-top: 3.5rem;
+    background: #000;
+    color: white;
+    padding: var(--screen-pd);
+    .realty {
+        grid-column: span 2;
+        h2 {
+            font-size: var(--md-font);
+        }
+        p {
+            color: hsl(0, 0%, 40%);
+            font-size: var(--colector-font);
+        }
+    }
+    .links {
+        grid-column: span 3;
+    }
 }
 
 .footer a {
@@ -253,90 +294,4 @@
     justify-content: center;
     align-items: center;
     flex-grow: 1;
-}
-
-.title a {
-    color: #0070f3;
-    text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-    text-decoration: underline;
-}
-
-.title {
-    margin: 0;
-    line-height: 1.15;
-    font-size: 4rem;
-}
-
-.title,
-.description {
-    text-align: center;
-}
-
-.description {
-    margin: 4rem 0;
-    line-height: 1.5;
-    font-size: 1.5rem;
-}
-
-.code {
-    background: #fafafa;
-    border-radius: 5px;
-    padding: 0.75rem;
-    font-size: 1.1rem;
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 800px;
-}
-
-.card {
-    margin: 1rem;
-    padding: 1.5rem;
-    text-align: left;
-    color: inherit;
-    text-decoration: none;
-    border: 1px solid #eaeaea;
-    border-radius: 10px;
-    transition: color 0.15s ease, border-color 0.15s ease;
-    max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-    color: #0070f3;
-    border-color: #0070f3;
-}
-
-.card h2 {
-    margin: 0 0 1rem 0;
-    font-size: 1.5rem;
-}
-
-.card p {
-    margin: 0;
-    font-size: 1.25rem;
-    line-height: 1.5;
-}
-
-.logo {
-    height: 1em;
-    margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-    .grid {
-        width: 100%;
-        flex-direction: column;
-    }
 }
