removed page over-flow

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -15,6 +15,7 @@
 .hero {
     width: 100vw;
     margin: 0;
+    padding: 0;
     min-height: 100vh;
     color: white;
     background-image: url(/hero.jpeg);
@@ -25,11 +26,13 @@
     text-align: center;
     .bg {
         // z-index: 1;
-        width: 100%;
-        height: 100%;
+        // width: 100%;
+        // height: 100%;
         position: absolute;
         top: 0;
         left: 0;
+        bottom: 0;
+        right: 0;
         background-color: rgba(0, 0, 0, 0.2);
     }
     h1 {
@@ -94,6 +97,11 @@
         h2 {
             text-transform: uppercase;
             color: hsl(220, 95%, 40%);
+            font-size: var(--md-font);
+        }
+        h4 {}
+        p {
+            font-size: 0.8rem;
         }
         div {
             font-size: 0.8rem;
@@ -102,6 +110,9 @@
 }
 
 .site_pick_image_section {
+    h3 {
+        font-size: var(--head-font);
+    }
     // min-height: 720px;
     // background: #000;
     .images {
@@ -111,8 +122,10 @@
         padding: 0.3rem;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         .img1 {
-            // width: clamp(200px, 50%, 300px);
-            min-height: 500px;
+            // width: clamp(200px, 80%, 400px);
+            min-height: 480px;
+            // max-width: 480px;
+            // margin: auto5
             background-size: cover;
             background-position: center center;
             border-radius: 5px;
@@ -120,7 +133,7 @@
         }
         .img2 {
             // min-width: 100px;
-            height: 500px;
+            height: 480px;
             background-size: cover;
             border-radius: 5px;
             background-position: center center;
@@ -136,6 +149,7 @@
         h3 {
             padding: 0;
             margin-bottom: 0;
+            // font-size: 1.5rem ;
         }
         div {
             display: flex;
@@ -165,12 +179,13 @@
     padding: var(--screen-pd);
     .show_case {
         display: grid;
-        // grid-template-columns: ;
         gap: 1rem;
         padding: 0.3rem;
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     }
-    h3 {}
+    h3 {
+        font-size: var(--head-font);
+    }
 }
 
 .collector {
@@ -184,12 +199,10 @@
     font-size: 1rem;
     border-radius: 5px;
     margin-top: 4rem;
-    .collector_title {
-        font-size: 1.3rem;
-        font-weight: 500;
+    h3 {
+        font-size: var(--head-font);
+        // font-weight: 500;
         width: 100%;
-        max-width: 900px;
-        text-align: left;
     }
     .boxes {
         width: 100%;
@@ -197,7 +210,12 @@
         gap: 1rem;
         display: grid;
         margin-top: 2rem;
+        border-radius: 10px;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        div {
+            cursor: pointer;
+            border-radius: 10px;
+        }
     }
 }
 
