--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,13 +5,20 @@
     --colector-lg: 1.5rem;
     --colector-font: 0.8rem;
     --head-font: 1.3rem;
+    --footer-cols: 1fr;
+    --footer-pd: 1rem;
     @media (min-width: 400px) {
-        --md-font: 2.5rem;
+        --md-font: 2.4rem;
         --head-font: 2rem;
         --lg-font: 6.5rem;
         --screen-pd: 0.5rem 4rem;
         --colector-lg: 2rem;
         --colector-font: 1rem;
+    }
+    @media (min-width: 700px) {
+        --md-font: 2.5rem;
+        --footer-cols: repeat(5, 1fr);
+        --footer-pd: 4rem;
     }
 }
 
