--- a/styles/Search.module.scss
+++ b/styles/Search.module.scss
@@ -1,13 +1,23 @@
 .main {
+    --screen-pd: 0.01rem 2rem;
     min-height: 100vh;
     padding: var(--screen-pd);
+    margin: 0;
     .grid {
-        margin-top: 3rem;
-        display: grid;
+        margin-top: 5rem;
         gap: 1rem;
         grid-template-columns: clamp(150px, 30%, 250px) 1fr 1fr;
-        .nav {}
+        .nav {
+            margin-top: 1rem;
+            width: clamp(150px, 30%, 250px);
+            max-width: 100vw;
+            margin: 0;
+            padding: 0;
+            // background: #000;
+        }
         .layout {
+            margin-left: calc(clamp(150px, 30%, 250px) + 2rem);
+            margin-top: 3rem;
             grid-column: span 2;
             display: grid;
             gap: 0.5rem;
@@ -15,9 +25,14 @@
         }
     }
     .nav {
-        padding: 0;
+        padding: 1rem 0rem;
         margin: 0;
-        // background: #000;
+        margin-left: -2rem;
+        padding-right: 1rem;
+        width: 100%;
+        background: white;
+        position: fixed;
+        width: 100%;
         h2 {
             padding: 0;
             margin: 0;
