--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -112,6 +112,7 @@
 }
 
 .site_pick_image_section {
+    // background: #000;
     h3 {
         font-size: var(--head-font);
     }
@@ -119,14 +120,16 @@
     // background: #000;
     .images {
         // min-height: 500px;
+        // max-width: 800px;
+        // margin: auto;
+        // overflow: hidden;
         display: grid;
         gap: 1rem;
         padding: 0.3rem;
         grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
         .img1 {
             // width: clamp(200px, 80%, 400px);
-            min-height: 480px;
-            // max-width: 480px;
+            height: clamp(300px, 60vw, 450px); // max-width: 480px;
             // margin: auto5
             background-size: cover;
             background-position: center center;
@@ -135,7 +138,11 @@
         }
         .img2 {
             // min-width: 100px;
-            height: 480px;
+            height: clamp(300px, 60vw, 450px); // max-width: 480px;
+            // height: 480px;
+            @media (max-width: 768px) {
+                grid-column: span 2;
+            }
             background-size: cover;
             border-radius: 5px;
             background-position: center center;
@@ -144,14 +151,18 @@
     .property_info {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
         padding: 0;
         width: clamp(250px, 80%, 450px);
         margin: 0;
-        h3 {
+        font-weight: 300;
+        font-size: 0.85rem;
+        h4 {
+            font-size: 1.3rem;
+            text-transform: uppercase;
             padding: 0;
-            margin-bottom: 0;
-            // font-size: 1.5rem ;
+            margin: 0;
+            margin-top: 1rem;
+            font-weight: 400;
         }
         div {
             display: flex;
@@ -183,7 +194,7 @@
         display: grid;
         gap: 1rem;
         padding: 0.3rem;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     }
     h3 {
         font-size: var(--head-font);
